Fix cropped image not filling carousel in dish show

--- a/app/styles/less/image.less
+++ b/app/styles/less/image.less
@@ -40,14 +40,14 @@
   width: 100%;
   position: relative;
   height: 0;
-  padding: 56.25% 0 0 0;
+  padding: 56% 0 0 0;
   overflow: hidden;
 }
 
 .carousel-img {
   position: absolute;
   display: block;
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
   left: 0;
   right: 0;
